--- a/src/app/chat-window/chat-window.component.scss
+++ b/src/app/chat-window/chat-window.component.scss
@@ -40,9 +40,17 @@
             .dot {    
                 color : #403E3E;
                 animation: jump 750ms infinite;
+                -webkit-animation: jump;
+                -webkit-animation-duration: 750ms;
+                -webkit-animation-iteration-count: infinite;
                 animation-delay : calc(100ms * var(--delay));
-                i {
-                    font-size : 0.6rem;
+                -webkit-animation-delay: calc(100ms * var(--delay));
+                .actual-dot {
+                    height: 10px;
+                    width: 10px;
+                    background-color: #bbb;
+                    border-radius: 50%;
+                    display: inline-block;
                 }
             }
         }
@@ -82,4 +90,14 @@
 }
 ::placeholder {
     color : #fff;
+}
+
+@keyframes jump {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(20%);
+    }
+    
 }
